Colored collection icons in the collection search dropdown don't adjust to the zoom level in Geometry nodes editor #86463

Closed
opened 2021-03-10 21:47:18 +01:00 by Leon Schittek · 8 comments
Member

System Information
Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.10.16

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-10 16:57, hash: 4cd9a1164b
Worked: -

Short description of error
The colored collection icons next to the search results in the collection search box drop down of the Collection Info node don't adjust to the zoom level in the Geometry Nodes editor.

Zoomed in:
colored-collection-zoom-large.png

Zoomed out:
colored-collection-zoom-small.png

Exact steps for others to reproduce the error
Open this .blend file:
colored-collection-icons-not-zooming.blend

From startup file:

  • Add a few collections to the scene and give some of them a color.
  • Add a Geometry Nodes modifier to the default cube and add a Collection Info node.
  • Click into the collection input field: The colored collection icons wont have the same size as the colorless ones.
  • Repeat last step on different zoom levels to confirm.
**System Information** Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.10.16 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-10 16:57, hash: `4cd9a1164b` Worked: - **Short description of error** The colored collection icons next to the search results in the collection search box drop down of the Collection Info node don't adjust to the zoom level in the Geometry Nodes editor. Zoomed in: ![colored-collection-zoom-large.png](https://archive.blender.org/developer/F9883590/colored-collection-zoom-large.png) Zoomed out: ![colored-collection-zoom-small.png](https://archive.blender.org/developer/F9883593/colored-collection-zoom-small.png) **Exact steps for others to reproduce the error** Open this .blend file: [colored-collection-icons-not-zooming.blend](https://archive.blender.org/developer/F9883596/colored-collection-icons-not-zooming.blend) From startup file: * Add a few collections to the scene and give some of them a color. * Add a Geometry Nodes modifier to the default cube and add a Collection Info node. * Click into the collection input field: The colored collection icons wont have the same size as the colorless ones. * Repeat last step on different zoom levels to confirm.
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel

#86487 was marked as duplicate of this issue

#86487 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @TimBrown

Added subscriber: @TimBrown

I have reported the same:
https://developer.blender.org/T86487

I have reported the same: https://developer.blender.org/T86487
Leon Schittek self-assigned this 2021-03-12 23:04:12 +01:00

This issue was referenced by 965425bcbc

This issue was referenced by 965425bcbc4dd8340286b83bccfa17e99792f594

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86463
No description provided.